# helios-cloud

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
charts/helios/: Chart.yaml  values.yaml
charts/helios/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
crates/helios-scanner/: Cargo.toml
crates/helios-scanner/src/: cache.rs  lib.rs  main.rs  metrics.rs  models.rs  server.rs
crates/helios-scanner/src/aws/: cloudwatch.rs  cost.rs  ec2.rs  mod.rs  scanner.rs
docs/: architecture.md
terraform/examples/complete/: main.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
