[package]
name = "helios-scanner"
version = "0.1.0"
edition = "2021"
description = "High-performance cloud resource scanner and metrics collector for HELIOS"
authors = ["Vigneshwar L <applemacbook6sep2004@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vignesh2027/helios-cloud"
keywords = ["cloud", "aws", "infrastructure", "metrics", "scanner"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "helios-scanner"
path = "src/main.rs"

[lib]
name = "helios_scanner"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-costexplorer = "1"
aws-sdk-sts = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "color", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
prometheus = { version = "0.13", features = ["process"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
